[project]
name = "plasmath"
dynamic = ["version", "dependencies", "requires-python"]
description = "Basic plasma physics calculations"
authors = [
     {name = "Mariana Moreira", email = "mtrocadomoreira@gmail.com"},
]
readme = "README.md"

[tool.poetry]
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
Pint = "^0.24.4"
sympy = "^1.14.0"
numpy = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
hypothesis = "^6.135.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
